[gd_scene load_steps=3 format=2]

[ext_resource path="res://Codes/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Health.png" type="Texture" id=2]

[node name="HealthUI" type="Node2D"]
script = ExtResource( 1 )

[node name="Heart1" type="Sprite" parent="."]
position = Vector2( 41, 9 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="Heart2" type="Sprite" parent="."]
position = Vector2( 25, 9 )
texture = ExtResource( 2 )
hframes = 3

[node name="Heart3" type="Sprite" parent="."]
position = Vector2( 9, 9 )
texture = ExtResource( 2 )
hframes = 3
